--- a/app/src/main/res/layout/fragment_make_application.xml
+++ b/app/src/main/res/layout/fragment_make_application.xml
@@ -15,116 +15,137 @@
         android:layout_gravity="center"
         android:src="@drawable/student_home_kou_logo" />
 
-    <LinearLayout
+    <TableLayout
+        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView_makeApp_YazOkul"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:backgroundTint="@color/transparent"
-            android:elevation="10dp">
+        <TableRow
+            android:layout_marginTop="15dp"
+            android:gravity="center">
 
-            <TextView
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView_makeApp_YazOkul"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Yaz Okulu Başvurusu"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="27dp"
-                android:textStyle="bold" />
+                android:layout_height="80dp"
+                android:backgroundTint="@color/transparent"
+                android:elevation="10dp">
 
-        </androidx.cardview.widget.CardView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Yaz Okulu Başvurusu"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="27dp"
+                    android:textStyle="bold" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView_makeApp_YatayGecis"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:backgroundTint="@color/transparent"
-            android:elevation="10dp">
+            </androidx.cardview.widget.CardView>
 
-            <TextView
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="15dp"
+            android:gravity="center">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView_makeApp_YatayGecis"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Yatay Geçiş Başvurusu"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="27dp"
-                android:textStyle="bold" />
+                android:layout_height="80dp"
+                android:backgroundTint="@color/transparent"
+                android:elevation="10dp">
 
-        </androidx.cardview.widget.CardView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Yatay Geçiş Başvurusu"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="27dp"
+                    android:textStyle="bold" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView_makeApp_DGS"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:backgroundTint="@color/transparent"
-            android:elevation="10dp">
+            </androidx.cardview.widget.CardView>
 
-            <TextView
+
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="15dp"
+            android:gravity="center">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView_makeApp_DGS"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="DGS Başvurusu"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="27dp"
-                android:textStyle="bold" />
+                android:layout_height="80dp"
+                android:backgroundTint="@color/transparent"
+                android:elevation="10dp">
 
-        </androidx.cardview.widget.CardView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="DGS Başvurusu"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="27dp"
+                    android:textStyle="bold" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView_makeApp_CAP"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:backgroundTint="@color/transparent"
-            android:elevation="10dp">
+            </androidx.cardview.widget.CardView>
 
-            <TextView
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="15dp"
+            android:gravity="center">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView_makeApp_CAP"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="ÇAP Başvurusu"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="27dp"
-                android:textStyle="bold" />
+                android:layout_height="80dp"
+                android:backgroundTint="@color/transparent"
+                android:elevation="10dp">
 
-        </androidx.cardview.widget.CardView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="ÇAP Başvurusu"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="27dp"
+                    android:textStyle="bold" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView_makeApp_Intibak"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:backgroundTint="@color/transparent"
-            android:elevation="10dp">
+            </androidx.cardview.widget.CardView>
 
-            <TextView
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="15dp"
+            android:gravity="center">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView_makeApp_Intibak"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Ders İntibakı Başvurusu"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="27dp"
-                android:textStyle="bold" />
+                android:layout_height="80dp"
+                android:backgroundTint="@color/transparent"
+                android:elevation="10dp">
 
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Ders İntibakı Başvurusu"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="27dp"
+                    android:textStyle="bold" />
+
+            </androidx.cardview.widget.CardView>
+        </TableRow>
+    </TableLayout>
+
 
 </FrameLayout>
