kod üzerinde düzenlemeler ve tablo üst metni eklendi.

--- a/app/src/main/res/layout/activity_my_app_item.xml
+++ b/app/src/main/res/layout/activity_my_app_item.xml
@@ -4,8 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="3dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginTop="2.5dp"
+    android:layout_marginBottom="2.5dp"
+    android:layout_marginRight="8dp"
     app:cardElevation="8dp"
+    app:cardCornerRadius="10dp"
     tools:context=".StudentHomeFragment.MyAppItem">
 
 
