--- a/app/src/main/res/layout/activity_yaz_okulu.xml
+++ b/app/src/main/res/layout/activity_yaz_okulu.xml
@@ -92,15 +92,13 @@
             android:textColor="@color/black"
             android:textSize="20dp"></TextView>
 
-        <LinearLayout
-            android:id="@+id/yazOkulu_linearLayoutDateBetween"
+        <TableLayout
             android:layout_width="match_parent"
+            android:layout_marginStart="5dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="15dp">
+            android:layout_margin="10dp">
 
+            <TableRow android:gravity="center">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -178,9 +176,10 @@
                     android:textColor="@color/red_helper"
                     android:textSize="12dp" />
             </LinearLayout>
+            </TableRow>
 
 
-        </LinearLayout>
+        </TableLayout>
 
 
         <TextView
@@ -225,8 +224,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:boxCornerRadiusBottomEnd="20dp"
-            app:boxCornerRadiusTopStart="20dp"
+            app:boxCornerRadiusBottomEnd="10dp"
+            app:boxCornerRadiusTopStart="5dp"
             app:boxStrokeColor="@color/kou_green"
             app:helperText="*Zorunlu Alan"
             app:helperTextTextColor="@color/red_helper">
@@ -244,15 +243,15 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:id="@+id/yazOkulu_linearLayoutTakeLesson1"
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
+            android:layout_marginStart="5dp"
+            android:layout_height="wrap_content">
+            <TableRow android:gravity="center">
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="50dp"
+                android:layout_width="0dp"
+                android:layout_weight="4"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 app:boxCornerRadiusBottomEnd="20dp"
@@ -275,7 +274,8 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="50dp"
+                android:layout_width="0dp"
+                android:layout_weight="4"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 app:boxCornerRadiusBottomEnd="20dp"
@@ -298,7 +298,8 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="50dp"
+                android:layout_width="0dp"
+                android:layout_weight="4"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 app:boxCornerRadiusBottomEnd="20dp"
@@ -321,7 +322,8 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="72dp"
+                android:layout_width="0dp"
+                android:layout_weight="6"
                 android:layout_height="wrap_content"
                 app:boxCornerRadiusBottomEnd="20dp"
                 app:boxCornerRadiusTopStart="20dp"
@@ -343,28 +345,31 @@
 
             <Button
                 android:id="@+id/buttonYazOkuluTakeLessonAdd"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="0dp"
+                android:layout_weight="4"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:onClick="yazOkuluTakeLessonAdd"
                 android:text="+"
-                android:textSize="14dp" />
+                android:textSize="20dp" />
 
             <Button
                 android:id="@+id/buttonYazOkuluTakeLessonRemove"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="0dp"
+                android:layout_weight="4"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:onClick="yazOkuluTakeLessonRemove"
                 android:text="-"
-                android:textSize="14dp" />
-        </LinearLayout>
+                android:textSize="22dp" />
+            </TableRow>
+        </TableLayout>
 
         <TextView
             android:layout_width="match_parent"
@@ -377,16 +382,15 @@
 
 
         <!--Transkript-->
-        <LinearLayout
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
+            android:layout_marginStart="5dp"
+            android:layout_height="wrap_content">
+            <TableRow android:gravity="center">
             <TextView
                 android:id="@+id/textView_yazOkul_fileStateTranscript"
-                android:layout_width="270dp"
+                android:layout_width="0dp"
+                android:layout_weight="4"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:layout_marginTop="30dp"
@@ -405,7 +409,8 @@
                 android:layout_margin="15dp"
                 android:layout_marginTop="30dp"
                 android:src="@drawable/no" />
-        </LinearLayout>
+            </TableRow>
+        </TableLayout>
 
         <TextView
             android:layout_width="match_parent"
@@ -418,15 +423,16 @@
 
 
         <!--Ders içerik-->
-        <LinearLayout
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_marginStart="5dp"
+            android:layout_height="wrap_content">
+        <TableRow android:gravity="center">
 
             <TextView
                 android:id="@+id/textView_yazOkul_fileStateLesson"
-                android:layout_width="270dp"
+                android:layout_width="0dp"
+                android:layout_weight="4"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:layout_marginTop="30dp"
@@ -445,7 +451,8 @@
                 android:layout_margin="15dp"
                 android:layout_marginTop="30dp"
                 android:src="@drawable/no" />
-        </LinearLayout>
+        </TableRow>
+        </TableLayout>
 
         <TextView
             android:layout_width="match_parent"
@@ -458,15 +465,16 @@
 
 
         <!--Taban Puan-->
-        <LinearLayout
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_marginStart="5dp"
+            android:layout_height="wrap_content">
+            <TableRow android:gravity="center">
 
             <TextView
                 android:id="@+id/textView_yazOkul_fileStateSubScore"
-                android:layout_width="270dp"
+                android:layout_width="0dp"
+                android:layout_weight="4"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:layout_marginTop="30dp"
@@ -485,7 +493,8 @@
                 android:layout_margin="15dp"
                 android:layout_marginTop="30dp"
                 android:src="@drawable/no" />
-        </LinearLayout>
+        </TableRow>
+    </TableLayout>
 
         <TextView
             android:layout_width="match_parent"
