interface yapıldı basvuralarım kartı için

--- a/app/src/main/res/layout/activity_my_app_item.xml
+++ b/app/src/main/res/layout/activity_my_app_item.xml
@@ -52,22 +52,23 @@
                 android:textSize="14dp" />
 
             <ImageButton
-
+                android:id="@+id/myApplicationItem_fileUploadButton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginRight="5dp"
                 android:background="@drawable/border_my_app_item"
-                android:backgroundTint="@color/kou_green"
+                android:backgroundTint="@color/ItemSelectedColor"
                 android:padding="10dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/file_upload"></ImageButton>
 
 
             <ImageButton
+                android:id="@+id/myApplicationItem_fileDownloadButton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/border_my_app_item"
-                android:backgroundTint="@color/ItemSelectedColor"
+                android:backgroundTint="@color/kou_green"
                 android:padding="10dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/filedownb"></ImageButton>
