--- a/app/src/main/res/layout/fragment_make_application.xml
+++ b/app/src/main/res/layout/fragment_make_application.xml
@@ -23,7 +23,7 @@
 
         <TableRow
             android:layout_marginTop="15dp"
-            android:gravity="center">
+            android:gravity="center_horizontal">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView_makeApp_YazOkul"
@@ -48,7 +48,7 @@
 
         <TableRow
             android:layout_marginTop="15dp"
-            android:gravity="center">
+            android:gravity="center_horizontal">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView_makeApp_YatayGecis"
@@ -74,7 +74,7 @@
 
         <TableRow
             android:layout_marginTop="15dp"
-            android:gravity="center">
+            android:gravity="center_horizontal">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView_makeApp_DGS"
@@ -99,7 +99,7 @@
 
         <TableRow
             android:layout_marginTop="15dp"
-            android:gravity="center">
+            android:gravity="center_horizontal">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView_makeApp_CAP"
@@ -124,7 +124,7 @@
 
         <TableRow
             android:layout_marginTop="15dp"
-            android:gravity="center">
+            android:gravity="center_horizontal">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView_makeApp_Intibak"
