--- a/app/src/main/res/layout/activity_yaz_okulu.xml
+++ b/app/src/main/res/layout/activity_yaz_okulu.xml
@@ -433,6 +433,7 @@
                 android:id="@+id/textView_yazOkul_fileStateLesson"
                 android:layout_width="0dp"
                 android:layout_weight="4"
+                android:enabled="false"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:layout_marginTop="30dp"
@@ -477,6 +478,7 @@
                 android:layout_weight="4"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
+                android:enabled="false"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/text_view_border"
                 android:onClick="selectFileSubScore"
